# olx_poll

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  main.py  olx_bot.db  pyproject.toml  pytest.ini  requirements.txt  s -ExecutionPolicy RemoteSigned) ; (& ZDevProjects.venvScriptsActivate.ps1)
docs/: BEST_PRACTICES.md  CONTEXT.md  PLAN.md  PROGRESS.md
src/: inspect_api.py  main.py  test_poller.py  verify_normalization.py
src/api/: app.py
src/api/templates/: base.html  detail.html  index.html
src/api/templates/partials/: config_form.html  product_list.html
src/bot/: notifier.py
src/bot/templates/: batch_summary.html  discovery.html
src/core/: config.py  database.py  discovery_filter.py  logging_config.py  polling_manager.py  stealth_config.py  utils.py
src/models/: olx.py  storage.py
src/scraper/: poller.py
tests/: conftest.py  test_api_endpoints.py  test_config.py  test_database.py  test_models.py
