[project]
name = "olxbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.28.2",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "jinja2-fragments>=1.12.0",
    "litestar[standard]>=2.22.0",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
]
